--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,18 +1,51 @@
 
 <% include ../partials/header %>
 
-<h1><%=campground.name%></h1>
-<img src="<%= campground.image%>">
-<p><%= campground.description%></p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-3">
+            <div class="lead">YelpCamp</div>
+            <div class="list-group">
+                <li class="list-group-item active">Info 1</li>
+                <li class="list-group-item">Info 2</li>
+                <li class="list-group-item">Info 3</li>
+            </div>
+        </div>
+        <div class="col-md-9">
+            <div class="thumbnail">
+                <img class="image-responsive" src="<%= campground.image%>">
+                <div class="caption-full">
+                    <h4 class="pull-right">Rs.800/night</h4>
+                    <h4><a><%=campground.name%></a></h4>  <!-- link to the direct hotel camping site-->
+                    <p><%= campground.description%></p>
+                </div>
+            </div>
+            <div class="well">
+                <div class="text-right">
+                    <a href="/campgrounds/<%= campground._id %>/comments/new" class="btn btn-success">Add new Comment</a>
+                </div>
+                <hr>
+                <% campground.comments.forEach(function(comment) { %>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <strong><%= comment.author %></strong>
+                            <span class="pull-right"> 10 days ago</span>
+                            <p>
+                                    <%= comment.text %>
+                            </p>                            
+                        </div>
+                    </div>
+                    <hr>   <!-- additionally added -->
+                <% }); %>                
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <p>
-    <a href="/campgrounds/<%= campground._id %>/comments/new" class="btn btn-success">Add new Comment</a>
 </p>
 
-<% campground.comments.forEach(function(comment) { %>
-    <p>
-        <strong><%= comment.author %></strong> - <%= comment.text %>
-    </p>
-<% }); %>
+
 
 <% include ../partials/footer %>
