login and logout functions added

--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,6 +1,8 @@
 
 <% include ../partials/header %>
 
+<!--<h4><%= currentuser %></h4>-->
+
 <div class="container">
     <header class="jumbotron">
         <div class="container">
