--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,12 +1,12 @@
 
 <% include partials/header %>
 
-<h1>signup</h1>
+<h1> login page</h1>
 
-<form action="/register" method="POST">
+<form action="/login" method="POST">
     <input type="text" name="username" placeholder="username">
     <input type="text" name="password" placeholder="password">
-    <button>Sign up</button>
+    <input type="submit" value="login">
 </form>
 
 <% include partials/footer %>
