updated show page

--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -18,6 +18,7 @@
                     <h4 class="pull-right">Rs.800/night</h4>
                     <h4><a><%=campground.name%></a></h4>  <!-- link to the direct hotel camping site-->
                     <p><%= campground.description%></p>
+                    <p><em>Submitted by : <%= campground.author.username%></em></p>
                 </div>
             </div>
             <div class="well">
