--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -27,3 +27,16 @@
                         </div>
                     </div>
                 </nav>
+                <div class="container">
+                    <% if(err && err.length>0){ %>
+                        <div class="alert alert-danger" role="alert">
+                            <%=err%>
+                        </div>
+                    <% } %>
+                    <% if(success && success.length>0){ %>                        
+                        <div class="alert alert-success" role="alert">
+                            <%=success%>
+                        </div>
+                    <% } %>    
+                </div>
+                
